--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --clr-primary-hsl-400: 26 100% 55%;
   --clr-primary-hsl-300: 25 100% 94%;
+  --clr-primary-hsl-200: 26 100% 70%;
 
   --clr-neutral-hsl-700: 220 13% 13%;
   --clr-neutral-hsl-600: 219 9% 45%;
@@ -15,13 +16,13 @@
 
   --ff-primary: "Kumbh Sans", sans-serif;
 
-  --fs-100: 0.6rem;
+  --fs-200: 0.7rem;
   --fs-300: 0.8rem;
   --fs-400: 1rem;
   --fs-500: 1.25rem;
   --fs-600: 1.5rem;
   --fs-700: 2rem;
-  --fs-800: 3rem;
+  --fs-800: 2.5rem;
 }
 
 *,
@@ -33,6 +34,15 @@
 * {
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.1;
+}
+p {
+  line-height: 1.75;
 }
 
 img {
@@ -49,7 +59,7 @@ html {
 }
 
 body {
-  margin-inline: min(8rem, 11vw - 2rem);
+  margin-inline: min(14rem, 18vw - 2rem);
 }
 
 .wrapper {
@@ -61,7 +71,8 @@ body {
 .nav-container {
   display: flex;
   align-items: center;
-  gap: min(4rem, 5vw - 1rem);
+  justify-content: center;
+  gap: min(4rem, 5vw - 2rem);
 }
 
 .primary-navigation {
@@ -107,13 +118,14 @@ a {
 
 .mobile-nav-toggle {
   display: none;
+  cursor: pointer;
 }
 
 .logo {
   min-width: fit-content;
 }
 
-@media (max-width: 38rem) {
+@media (max-width: 45rem) {
   .primary-navigation {
     display: none;
   }
@@ -157,4 +169,138 @@ a {
     inset: 0;
     background-color: hsl(var(--clr-neutral-hsl-black) / 0.75);
   }
+}
+
+.main-container {
+  padding: min(6rem, 8vw - 1rem) 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 6rem;
+}
+
+.product-img {
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.thumbnails {
+  display: flex;
+  gap: min(2rem, 4vw - 1rem);
+  margin-top: 2rem;
+}
+
+.thumbnails > a {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.title {
+  color: hsl(var(--clr-neutral-hsl-700));
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-800);
+}
+
+.company-name {
+  color: hsl(var(--clr-primary-hsl-400));
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-300);
+  text-transform: uppercase;
+  letter-spacing: 0.25ch;
+}
+
+.product-card > * + * {
+  margin-top: 2rem;
+}
+
+.title {
+  margin-top: 1rem;
+}
+
+.price-before {
+  color: hsl(var(--clr-neutral-hsl-700));
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: var(--fs-500);
+}
+
+.price {
+  font-weight: var(--fw-bold);
+  display: grid;
+  gap: 0.5rem;
+}
+
+.sale {
+  color: hsl(var(--clr-primary-hsl-400));
+  background-color: hsl(var(--clr-primary-hsl-300));
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.sale h2 {
+  font-size: var(--fs-400);
+}
+
+.price-after {
+  font-size: var(--fs-400);
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+}
+
+.buttons > * {
+  flex: 1;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.count-btn > * {
+  flex: 1;
+}
+
+.count-btn {
+  flex: 2;
+  background-color: hsl(var(--clr-neutral-hsl-400));
+  border-radius: 0.25rem;
+  padding-block: 0.25rem;
+  color: hsl(var(--clr-neutral-hsl-700));
+  font-weight: var(--fw-bold);
+}
+
+.add-to-cart {
+  flex: 3;
+  background-color: hsl(var(--clr-primary-hsl-400));
+  color: hsl(var(--clr-neutral-hsl-white));
+  padding: 0.75rem 0rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-weight: var(--fw-bold);
+  cursor: pointer;
+}
+
+.add-to-cart:active {
+  background-color: hsl(var(--clr-primary-hsl-200));
+}
+.add-to-cart img {
+  filter: brightness(1500%);
+}
+.count-btn button {
+  background: none;
+  border: none;
+}
+
+.border-primary-clr {
+  border: solid 3px hsl(var(--clr-primary-hsl-200));
+}
+.active-thumbnail {
+  opacity: 0.5;
 }
