--- a/style.css
+++ b/style.css
@@ -234,7 +234,8 @@ a {
 
 .price {
   font-weight: var(--fw-bold);
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 0.5rem;
 }
 
@@ -385,8 +386,26 @@ a {
 @media (max-width: 45rem) {
   .main-container {
     grid-template-columns: 1fr;
-    gap: 1rem;
+    gap: 0;
     padding: 0;
+  }
+
+  .product-card {
+    padding: 2rem;
+  }
+
+  .buttons {
+    flex-direction: column;
+  }
+  .buttons > * {
+    align-self: stretch;
+  }
+  .price {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .count-btn {
+    padding-block: 0.5rem;
   }
 
   .product-img-thumbnails {
